[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nativeforge"
version = "0.1.0"
description = "NativeForge API — sovereignty-first tribal grant pursuit (application package)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/nativeforge/services/opportunity_source_catalog.py" = ["E501"]
"src/nativeforge/services/discovery_evidence_pack_service.py" = ["E501"]
"src/nativeforge/repositories/evidence_pack.py" = ["E501"]
"src/nativeforge/services/source_coverage_plan_service.py" = ["E501"]
"src/nativeforge/services/source_candidate_registry_service.py" = ["E501"]
"src/nativeforge/services/source_onboarding_decision_pack_service.py" = ["E501"]
"src/nativeforge/services/alembic_migration_generation_gate_service.py" = ["E501"]
"src/nativeforge/services/active_source_runtime_creation_execution_service.py" = ["E501"]
"scripts/nativeforge_execute_runtime_active_source_creation.py" = ["E501"]
"tests/test_sprint19_evidence_pack.py" = ["E501"]
"tests/test_sprint62_runtime_active_source_creation_execution_evidence.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_packet_service.py" = ["E501"]
"tests/test_sprint75_active_source_activation_preview_execution_plan_draft_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_review_packet_service.py" = ["E501"]
"tests/test_sprint76_active_source_activation_preview_execution_plan_draft_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_human_approval_decision_packet_service.py" = ["E501"]
"tests/test_sprint77_active_source_activation_preview_execution_plan_human_approval_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_review_packet_service.py" = ["E501"]
"tests/test_sprint78_active_source_activation_future_execution_authorization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint79_active_source_activation_future_execution_authorization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_non_runnable_execution_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint80_active_source_activation_future_non_runnable_execution_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint81_active_source_activation_future_execution_plan_finalization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint82_active_source_activation_future_execution_plan_finalization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_non_runnable_execution_plan_packet_service.py" = [
    "E501",
]
"tests/test_sprint83_active_source_activation_final_non_runnable_execution_plan_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_human_execution_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint84_active_source_activation_final_human_execution_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_packet_service.py" = [
    "E501",
]
"tests/test_sprint85_active_source_activation_execution_preparation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint86_active_source_activation_execution_preparation_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint87_active_source_activation_execution_preparation_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint88_active_source_activation_source_activation_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint89_active_source_activation_source_activation_readiness_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint90_active_source_activation_source_activation_readiness_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_source_activation_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint91_active_source_activation_final_source_activation_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_later_non_runnable_activation_handoff_packet_service.py" = [
    "E501",
]
"tests/test_sprint92_active_source_activation_later_non_runnable_activation_handoff_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_design_packet_service.py" = [
    "E501",
]
"tests/test_sprint93_active_source_activation_separate_runtime_implementation_design_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint94_active_source_activation_separate_runtime_implementation_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint95_active_source_activation_separate_runtime_implementation_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_preparation_packet_service.py" = [
    "E501",
]
"tests/test_sprint96_active_source_activation_separate_runtime_implementation_preparation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint97_active_source_activation_separate_runtime_implementation_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_handoff_packet_service.py" = [
    "E501",
]
"tests/test_sprint98_active_source_activation_separate_runtime_implementation_handoff_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint99_active_source_activation_separate_runtime_implementation_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_plan_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint100_active_source_activation_separate_runtime_implementation_plan_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_plan_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint101_active_source_activation_separate_runtime_implementation_plan_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_final_approval_packet_service.py" = [
    "E501",
]
"tests/test_sprint102_active_source_activation_separate_runtime_implementation_final_approval_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint103_active_source_activation_separate_runtime_implementation_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_release_packet_service.py" = [
    "E501",
]
"tests/test_sprint104_active_source_activation_separate_runtime_implementation_release_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint105_active_source_activation_operator_release_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint106_active_source_activation_operator_release_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint107_active_source_activation_operator_release_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint108_active_source_activation_operator_release_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_packet_service.py" = [
    "E501",
]
"tests/test_sprint109_active_source_activation_operator_release_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_final_approval_packet_service.py" = [
    "E501",
]
"tests/test_sprint110_active_source_activation_operator_release_final_approval_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_execution_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint111_active_source_activation_operator_execution_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_execution_packet_service.py" = ["E501"]
"tests/test_sprint112_active_source_activation_operator_execution_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_activation_packet_service.py" = ["E501"]
"tests/test_sprint113_active_source_activation_operator_activation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_live_source_packet_service.py" = ["E501"]
"tests/test_sprint114_active_source_activation_operator_live_source_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_full_source_packet_service.py" = ["E501"]
"tests/test_sprint115_active_source_activation_operator_full_source_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_final_activation_packet_service.py" = ["E501"]
"tests/test_sprint116_active_source_activation_operator_final_activation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_demo_build_execution_packet_service.py" = ["E501"]
"tests/test_sprint117_active_source_activation_m0_demo_build_execution_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_organizational_entity_profile_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint118_active_source_activation_m0_organizational_entity_profile_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_grants_gov_seeded_opportunity_ingestion_interface_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint119_active_source_activation_m0_grants_gov_seeded_opportunity_ingestion_interface_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_tribal_eligibility_mission_fit_scoring_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint120_active_source_activation_m0_tribal_eligibility_mission_fit_scoring_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_nofo_plain_language_summary_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint121_active_source_activation_m0_nofo_plain_language_summary_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_opportunity_scoring_draft_recommendation_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint122_active_source_activation_m0_opportunity_scoring_draft_recommendation_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_pursuit_pipeline_kanban_deadline_tracking_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint123_active_source_activation_m0_pursuit_pipeline_kanban_deadline_tracking_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_sf424_autofill_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint124_active_source_activation_m0_sf424_autofill_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_requirement_extraction_checklist_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint125_active_source_activation_m0_requirement_extraction_checklist_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_data_sovereignty_policy_export_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint126_active_source_activation_m0_data_sovereignty_policy_export_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_human_review_gates_demo_closeout_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint127_active_source_activation_m0_human_review_gates_demo_closeout_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_demo_narrative_buyer_walkthrough_packet_service.py" = [
    "E501",
]
"tests/test_sprint128_active_source_activation_m0_demo_narrative_buyer_walkthrough_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_demo_readiness_evidence_pack_operator_checklist_packet_service.py" = [
    "E501",
]
"tests/test_sprint129_active_source_activation_m0_demo_readiness_evidence_pack_operator_checklist_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_pilot_transition_m1_readiness_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint130_active_source_activation_m0_pilot_transition_m1_readiness_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_scope_delivery_boundary_packet_service.py" = [
    "E501",
]
"tests/test_sprint131_active_source_activation_m1_pilot_scope_delivery_boundary_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_implementation_dependency_map_packet_service.py" = [
    "E501",
]
"tests/test_sprint132_active_source_activation_m1_pilot_implementation_dependency_map_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_controlled_build_sequencing_human_gate_packet_service.py" = [
    "E501",
]
"tests/test_sprint133_active_source_activation_m1_controlled_build_sequencing_human_gate_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_source_ingestion_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint134_active_source_activation_m1_source_ingestion_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_nofo_extraction_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint135_active_source_activation_m1_nofo_extraction_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_form_package_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint136_active_source_activation_m1_form_package_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_human_review_workflow_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint137_active_source_activation_m1_human_review_workflow_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_audit_export_sovereignty_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint138_active_source_activation_m1_audit_export_sovereignty_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_operations_support_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint139_active_source_activation_m1_pilot_operations_support_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_demo_to_build_transition_closeout_packet_service.py" = [
    "E501",
]
"tests/test_sprint140_active_source_activation_m1_pilot_demo_to_build_transition_closeout_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m1_controlled_build_authorization_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint141_active_source_activation_m1_controlled_build_authorization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m1_pilot_implementation_pre_launch_checklist_packet_service.py" = [
    "E501",
]
"tests/test_sprint142_active_source_activation_m1_pilot_implementation_pre_launch_checklist_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_operational_launch_simulation_packet_service.py" = [
    "E501",
]
"tests/test_sprint143_active_source_activation_m1_pilot_operational_launch_simulation_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_metrics_closeout_reporting_packet_service.py" = [
    "E501",
]
"tests/test_sprint144_active_source_activation_m1_pilot_metrics_closeout_reporting_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_lessons_learned_post_pilot_optimization_packet_service.py" = [
    "E501",
]
"tests/test_sprint145_active_source_activation_m1_lessons_learned_post_pilot_optimization_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_readiness_rollup_next_phase_decision_boundary_packet_service.py" = [
    "E501",
]
"tests/test_sprint146_active_source_activation_m1_readiness_rollup_next_phase_decision_boundary_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_documentation_consolidation_operator_roadmap_packet_service.py" = [
    "E501",
]
"tests/test_sprint147_active_source_activation_m1_documentation_consolidation_operator_roadmap_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_customer_validation_planning_interview_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint148_active_source_activation_m1_customer_validation_planning_interview_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_technical_architecture_review_runtime_boundary_packet_service.py" = [
    "E501",
]
"tests/test_sprint149_active_source_activation_m1_technical_architecture_review_runtime_boundary_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_bounded_implementation_design_human_gate_packet_service.py" = [
    "E501",
]
"tests/test_sprint150_active_source_activation_m1_bounded_implementation_design_human_gate_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_runtime_authorization_review_readiness_no_execution_packet_service.py" = [
    "E501",
]
"tests/test_sprint151_active_source_activation_m1_runtime_authorization_review_readiness_no_execution_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_human_runtime_authorization_board_packet_service.py" = [
    "E501",
]
"tests/test_sprint152_active_source_activation_m1_human_runtime_authorization_board_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_post_board_decision_routing_next_safe_action_packet_service.py" = [
    "E501",
]
"tests/test_sprint153_active_source_activation_m1_post_board_decision_routing_next_safe_action_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_evidence_remediation_queue_re_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint154_active_source_activation_m1_evidence_remediation_queue_re_review_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_re_review_board_readiness_evidence_closure_packet_service.py" = [
    "E501",
]
"tests/test_sprint155_active_source_activation_m1_re_review_board_readiness_evidence_closure_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_runtime_authorization_decision_record_audit_evidence_packet_service.py" = [
    "E501",
]
"tests/test_sprint156_active_source_activation_m1_runtime_authorization_decision_record_audit_evidence_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_final_runtime_authorization_packet_index_readiness_rollup_service.py" = [
    "E501",
]
"tests/test_sprint157_active_source_activation_m1_final_runtime_authorization_packet_index_readiness_rollup.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_human_authorization_handoff_final_no_execution_decision_brief_service.py" = [
    "E501",
]
"tests/test_sprint158_active_source_activation_m1_human_authorization_handoff_final_no_execution_decision_brief.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_no_execution_authorization_chain_closeout_roadmap_pivot_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint159_active_source_activation_m1_no_execution_authorization_chain_closeout_roadmap_pivot_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/discovery_operator_continuity_rollup_service.py" = [
    "E501",
]
"tests/test_sprint163_discovery_operator_continuity_rollup.py" = [
    "E501",
]
"src/nativeforge/services/discovery_intake_dedupe_fingerprint_service.py" = [
    "E501",
]
"src/nativeforge/services/discovery_intake_service.py" = [
    "E501",
]
"tests/test_sprint164_discovery_intake_dedupe_fingerprint.py" = [
    "E501",
]
"src/nativeforge/services/discovery_api_inventory_verification_service.py" = [
    "E501",
]
"tests/test_sprint165_discovery_api_inventory_verification.py" = [
    "E501",
]
"tests/test_sprint166_discovery_engine_post_pivot_closeout_packet.py" = [
    "E501",
]
"src/nativeforge/services/discovery_engine_post_pivot_closeout_packet_service.py" = [
    "E501",
]
"tests/test_sprint37_source_candidate_registry.py" = ["E501"]
"tests/test_sprint38_source_onboarding_decision_pack.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_schema_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_field_provenance_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_sensitive_field_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_review_status_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_unknown_value_policy_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_no_invention_guard_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_verified_by_user_guard_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_no_mutation_without_approval_guard_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_demo_fixture_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_record_builder_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_evaluator_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_hardened_record_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_rollup_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_stage7_gate_verification_service.py" = ["E501"]
"src/nativeforge/services/org_applicant_profile_stage7_closeout_packet_service.py" = ["E501"]
"tests/test_sprint197_org_applicant_profile_schema.py" = ["E501"]
"tests/test_sprint198_org_applicant_profile_field_provenance.py" = ["E501"]
"tests/test_sprint199_org_applicant_profile_sensitive_field.py" = ["E501"]
"tests/test_sprint200_org_applicant_profile_review_status.py" = ["E501"]
"tests/test_sprint201_org_applicant_profile_unknown_value_policy.py" = ["E501"]
"tests/test_sprint202_org_applicant_profile_no_invention_guard.py" = ["E501"]
"tests/test_sprint203_org_applicant_profile_verified_by_user_guard.py" = ["E501"]
"tests/test_sprint204_org_applicant_profile_no_mutation_without_approval_guard.py" = ["E501"]
"tests/test_sprint205_org_applicant_profile_demo_fixture.py" = ["E501"]
"tests/test_sprint206_org_applicant_profile_record_builder.py" = ["E501"]
"tests/test_sprint207_org_applicant_profile_evaluator.py" = ["E501"]
"tests/test_sprint208_org_applicant_profile_hardened_record.py" = ["E501"]
"tests/test_sprint209_org_applicant_profile_rollup.py" = ["E501"]
"tests/test_sprint210_org_applicant_profile_stage7_gate_verification.py" = ["E501"]
"tests/test_sprint211_org_applicant_profile_stage7_closeout_packet.py" = ["E501"]
"src/nativeforge/services/matching_readiness_dimension_vocabulary_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_match_label_vocabulary_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_readiness_label_vocabulary_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_next_action_guidance_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_applicant_recommendation_guard_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_no_profile_mutation_guard_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_no_eligibility_without_review_guard_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_missing_data_fail_closed_guard_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_demo_fixture_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_matching_evaluator_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_readiness_evaluator_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_record_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_rollup_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_stages8_10_gate_verification_service.py" = ["E501"]
"src/nativeforge/services/matching_readiness_stages8_10_closeout_packet_service.py" = ["E501"]
"tests/test_sprint212_matching_readiness_dimension_vocabulary.py" = ["E501"]
"tests/test_sprint213_matching_readiness_match_label_vocabulary.py" = ["E501"]
"tests/test_sprint214_matching_readiness_readiness_label_vocabulary.py" = ["E501"]
"tests/test_sprint215_matching_readiness_next_action_guidance.py" = ["E501"]
"tests/test_sprint216_matching_readiness_applicant_recommendation_guard.py" = ["E501"]
"tests/test_sprint217_matching_readiness_no_profile_mutation_guard.py" = ["E501"]
"tests/test_sprint218_matching_readiness_no_eligibility_without_review_guard.py" = ["E501"]
"tests/test_sprint219_matching_readiness_missing_data_fail_closed_guard.py" = ["E501"]
"tests/test_sprint220_matching_readiness_demo_fixture.py" = ["E501"]
"tests/test_sprint221_matching_readiness_matching_evaluator.py" = ["E501"]
"tests/test_sprint222_matching_readiness_readiness_evaluator.py" = ["E501"]
"tests/test_sprint223_matching_readiness_record.py" = ["E501"]
"tests/test_sprint224_matching_readiness_rollup.py" = ["E501"]
"tests/test_sprint225_matching_readiness_stages8_10_gate_verification.py" = ["E501"]
"tests/test_sprint226_matching_readiness_stages8_10_closeout_packet.py" = ["E501"]
"src/nativeforge/services/classification_evidence_honest_labeling_guard_service.py" = ["E501"]
"src/nativeforge/services/real_grant_classification_input_adapter_service.py" = ["E501"]
"src/nativeforge/services/real_grant_classify_match_service.py" = ["E501"]
"src/nativeforge/services/real_grant_classify_match_gate_verification_service.py" = ["E501"]
"src/nativeforge/services/real_grant_classify_match_closeout_packet_service.py" = ["E501"]
"src/nativeforge/services/real_grant_native_relevance_record_service.py" = ["E501"]
"src/nativeforge/services/mixed_corpus_builder_service.py" = ["E501"]
"src/nativeforge/services/mixed_corpus_grant_field_derivation_service.py" = ["E501"]
"src/nativeforge/services/mixed_corpus_classification_service.py" = ["E501"]
"src/nativeforge/services/mixed_corpus_discrimination_orchestrator_service.py" = ["E501"]
"src/nativeforge/services/mixed_corpus_discrimination_gate_verification_service.py" = ["E501"]
"src/nativeforge/services/nf13_irrelevant_reexamination_service.py" = ["E501"]
"src/nativeforge/services/tribe_eligible_broad_discoverability_guard_service.py" = ["E501"]
"tests/test_sprint334_mixed_corpus_classification.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["nativeforge"]
omit = ["*/tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
